<resources>
    <string name="app_name">Vantal</string>
    <string name="search">Search</string>
    <string name="bookings">Bookings</string>
    <string name="favorites">Favorites</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="already_account">Already Have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t Have an account yet?</string>
    <string name="rentals">Rentals</string>
    <string name="account">Account</string>
    <string name="upcoming">Upcoming</string>
    <string name="ended">Ended</string>
    <string name="payment_methods">Payment methods</string>
    <string name="help">Help centre</string>
    <string name="contact">Contact Vantal</string>
    <string name="got_van">Got a van?</string>
    <string name="earn_cash">Earn some cash by sharing it</string>
    <string name="edit_profile">Edit profile</string>
    <string name="member_since">Member since</string>
    <string name="delete_account">Delete my account</string>
    <string name="logout">Log out</string>
    <string name="rentals_lowcase">rentals</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="additional_info">Additional information</string>
    <string name="about_me">A bit about me (optional)</string>
    <string name="comma">,</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="type_message">Type your message here</string>
    <string name="send">Send</string>
    <string name="add_card">Add card</string>
    <string name="no_card_yet">You have not registered a card yet.</string>
    <string name="cardholder">Cardholder name</string>
    <string name="xxxx">XXXX</string>
    <string name="expiry">expiry</string>
    <string name="new_booking">New Booking</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
</resources>