<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Rental.RentalFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/account"
        android:textColor="#191717"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        >


        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/account"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/profile_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="#C5C2C2" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/payment_methods_card"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_card"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp">


        <ImageView
            android:id="@+id/payment_methods_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_wallet"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/tv_payment_methods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/payment_methods_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="#C5C2C2" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/help_card"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_methods_card"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp">


        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_help"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/help_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="#C5C2C2" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contact_card"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_card"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp">

        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_email"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/contact_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="#C5C2C2" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rent_card"
        android:layout_width="322dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_card">


        <ImageView
            android:id="@+id/rent_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/rent"
            app:tint="@color/cursor" />

        <TextView
            android:id="@+id/tv_gotAVan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:text="@string/got_van"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="45dp"
            android:text="@string/earn_cash"
            android:textColor="@color/black" />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>